--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.marfikus.jokeapp">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".JokeApp"
         android:allowBackup="true"
